# Fed_Campus-MF-

./: .gitignore  README.md
android-visualizer/app/: build.gradle.kts
android-visualizer/app/src/main/java/com/mobilefinetuner/visualizer/: MainActivity.kt
android-visualizer/app/src/main/java/com/mobilefinetuner/visualizer/model/: TrainingModels.kt
android-visualizer/app/src/main/java/com/mobilefinetuner/visualizer/ui/: DashboardScreen.kt  RunnerScreen.kt
android-visualizer/app/src/main/java/com/mobilefinetuner/visualizer/viewmodel/: ExperimentViewModel.kt
android-visualizer/mft-sdk/src/androidTest/java/com/mobilefinetuner/sdk/: MobileFineTunerDeviceSmokeTest.java
android-visualizer/mft-sdk/src/main/cpp/: mobile_finetuner_jni.cpp
android-visualizer/mft-sdk/src/main/java/com/mobilefinetuner/sdk/: MobileFineTuner.java
docs/: ANDROID_APP.md  ANDROID_SDK.md  ARCHITECTURE.md  CURRENT_FAMILY_TASK_MATRIX.md  GETTING_STARTED.md  MODEL_ASSETS.md  MODEL_LAYER_ROADMAP.md  PUBLIC_API.md
examples/common/mmlu/: mmlu_runner.cpp
examples/gemma_3_1b_pt_lora_finetune/: README.md  run_eval.sh  run_train.sh
examples/gemma_3_1b_pt_lora_finetune/src/: main.cpp
examples/gemma_3_270m_lora_finetune/: README.md  run_eval.sh  run_train.sh
examples/gemma_3_270m_lora_finetune/src/: main.cpp
examples/gpt2_medium_lora_finetune/: README.md  run_eval.sh  run_train.sh
examples/gpt2_medium_lora_finetune/src/: main.cpp
examples/gpt2_small_lora_finetune/: README.md  run_eval.sh
examples/gpt2_small_lora_finetune/src/: eval_mmlu.cpp  main.cpp
examples/qwen_lora_finetune/: CMakeLists.txt  run_mmlu.sh  run_qnli.sh  run_wikitext.sh
examples/qwen_lora_finetune/src/: dpo_main.cpp  mmlu_main.cpp  wikitext_main.cpp
figures/: dpo-training-flow.md  dpo-training-flow.mmd
operator/: CMakeLists.txt
operator/finetune_ops/core/: autograd_engine.cpp  backward_functions.cpp  backward_functions.h  dpo_loss.cpp  dpo_loss.h  lm_loss.cpp  memory_efficient_attention.h  ops.cpp  ops.h  performance_monitor.cpp  tensor.cpp  test_dpo_loss.cpp  test_dtype_mixed_precision.cpp  test_tokenizer_factory.cpp  test_tokenizer_hf_golden.cpp  tokenizer.cpp  tokenizer.h  tokenizer_bpe.cpp  tokenizer_bpe.h
operator/finetune_ops/data/: batch_provider.cpp  batch_provider.h  causal_lm_batch.cpp  causal_lm_batch.h  preference_batch.cpp  preference_batch.h  test_causal_lm_batch.cpp  test_jsonl_mask_alignment.cpp  test_preference_batch.cpp  wikitext2_dataset.cpp  wikitext2_dataset.h
operator/finetune_ops/graph/: CMakeLists.txt  auto_model.cpp  auto_model.h  gemma_lora_injector.cpp  gemma_model.cpp  gemma_model.h  gpt2_model.cpp  gpt2_model.h  llama_model.cpp  llama_model.h  lora_injector.cpp  lora_saver.cpp  model_family_adapter.cpp  model_family_adapter.h  model_registry.cpp  model_registry.h  qwen_model.cpp  qwen_model.h  safetensors_loader.cpp  safetensors_loader.h  test_auto_model.cpp  test_auto_model_alignment.cpp  test_auto_model_peft_step_alignment.cpp  test_model_registry.cpp
operator/finetune_ops/memory/: arena_allocator.h
operator/finetune_ops/nn/: lora_linear.cpp  test_lora_step_alignment.cpp
operator/finetune_ops/optim/: auto_trainer.cpp  auto_trainer.h  dpo_trainer.cpp  dpo_trainer.h  test_dpo_trainer.cpp
operator/include/mobile_finetuner/: mobile_finetuner.h
operator/scripts/: generate_gemma_golden.py
presentations/: edgeflowertune_logger_evaluator_20260610.pptx  edgeflowertune_logger_evaluator_speaker_notes_20260610.md
scripts/: README.md  check_lm_alignment_fixture.sh  check_peft_lora_step_fixture.sh  check_release_tree.sh  check_tokenizer_hf_alignment.sh  generate_lm_alignment_fixture.py  generate_peft_lora_step_fixture.py  generate_tokenizer_hf_golden_fixtures.py  prepare_arcc_jsonl.py  prepare_mcq_jsonl.py  prepare_qnli_jsonl.py  prepare_ultrafeedback_dpo_jsonl.py  run_qwen_dpo_pytorch_compare.py
scripts/android/: build_qwen_android.sh  run_mft_sdk_device_smoke.sh  run_qwen_qnli_native_phone.sh
